--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,3 +31,15 @@ services:
 networks:
   glpi-network:
     driver: bridge
+
+  metabase:
+      image: metabase/metabase:latest
+      ports:
+        - "3000:3000"
+      environment:
+        MB_DB_TYPE: mysql
+        MB_DB_DBNAME: metabase
+        MB_DB_PORT: 3306
+        MB_DB_USER: root
+        MB_DB_PASS: dioux
+        MB_DB_HOST: mariadb
