--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3.1'
 services:
-#MariaDB Container
+  # MariaDB Container
   mariadb:
     image: mariadb:10.7
     ports:
@@ -12,13 +12,8 @@ services:
     networks:
       - glpi-network
     restart: always
- 
-#glpi/glpi conta de administrador,
-#tech/tech conta de técnico,
-#normal/normal conta «normal»,
-#post-only/postonly conta somente pós-publicação.
- 
-#GLPI Container
+
+  # GLPI Container
   glpi:
     image: diouxx/glpi
     container_name: glpi
@@ -29,19 +24,22 @@ services:
       - glpi-network
     restart: always
 
+  # Metabase Container
   metabase:
-      image: metabase/metabase:latest
-      ports:
-        - "3000:3000"
-      environment:
-        MB_DB_TYPE: mysql
-        MB_DB_DBNAME: metabase
-        MB_DB_PORT: 3306
-        MB_DB_USER: root
-        MB_DB_PASS: dioux
-        MB_DB_HOST: mariadb
+    image: metabase/metabase:latest
+    ports:
+      - "3000:3000"
+    environment:
+      MB_DB_TYPE: mysql
+      MB_DB_DBNAME: metabase
+      MB_DB_PORT: 3306
+      MB_DB_USER: root
+      MB_DB_PASS: dioux
+      MB_DB_HOST: mariadb
+    networks:
+      - glpi-network
+    restart: always
+
 networks:
   glpi-network:
     driver: bridge
-
-  
