:hammer: Alter users

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
       MB_DB_TYPE: mysql
       MB_DB_DBNAME: metabase
       MB_DB_PORT: 3306
-      MB_DB_USER: root
+      MB_DB_USER: glpi_user
       MB_DB_PASS: dioux
       MB_DB_HOST: mariadb
     networks:
